--- a/DataStucture_using_javascript/Question10.html
+++ b/DataStucture_using_javascript/Question10.html
@@ -119,7 +119,10 @@
             queue.dequeue();
         }
         console.log("New Stack values are:",stackNew.printStack())
-
+        
+        //output
+        //Old Stack values are: 10 20 30
+        //New Stack values are: 30 20 10 
         
 
     </script>
